# stats_lib_cpp

./: CMakeLists.txt  Makefile  README.md
cmake/: stats_lib-config.cmake.in
include/stats_lib/: stats_lib.hpp
include/stats_lib/stats_lib/: distribution.hpp  estimation.hpp  rng.hpp  sampling.hpp
src/: distributions.cpp  estimation.cpp  rng.cpp  sampling.cpp
tests/: CMakeLists.txt  distribution_tests.cpp  estimation_tests.cpp  rng_tests.cpp  sampling_tests.cpp
